# getargs

./: .gitignore  Cargo.toml  LICENSE  README.md
bench/: Cargo.toml  README.md
bench/examples/: ridiculous_argument.rs  ridiculous_flags.rs  vs.rs
bench/src/: evolution.rs  lib.rs  versus.rs
examples/: README.md  anywhere.rs  anywhere_helper.rs  anywhere_manual.rs  complete.rs  no_alloc.rs  os_str.rs  print.rs  subcommands.rs
src/: arg.rs  error.rs  iter.rs  lib.rs  opt.rs  tests.rs  traits.rs
