[package]
name = "getargs"
version = "0.2.0"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2018"
license = "MIT"
description = "A truly zero-cust argument parser"
homepage = "https://github.com/j-tai/getargs"
documentation = "https://docs.rs/getargs/*/getargs/"
repository = "https://github.com/j-tai/getargs"
keywords = ["arg", "argument", "parse", "parser", "cli"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
