[package]
name = "getargs"
version = "0.5.0"
authors = ["James Tai <jtai@jtai.ca>", "LoganDark"]
edition = "2021"
license = "MIT"
description = "A truly zero-cost argument parser"
homepage = "https://github.com/j-tai/getargs"
documentation = "https://docs.rs/getargs/*/getargs/"
repository = "https://github.com/j-tai/getargs"
keywords = ["arg", "argument", "parse", "parser", "cli"]
categories = ["command-line-interface"]
readme = "README.md"

[features]
std = []
default = ["std"]

[dependencies]

[dev-dependencies]
argv = "~0.1.5"
thiserror = "^1.0.31"
